# pytest-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: README.md  error.md  test_example.py
pytest_examples/: __init__.py  config.py  eval_example.py  find_examples.py  insert_print.py  lint.py  modify_files.py  run_code.py  run_examples.py  traceback.py
requirements/: linting.in  linting.txt  pyproject.txt  testing.in  testing.txt
tests/: test_config.py  test_find_examples.py  test_insert_print.py  test_lint.py  test_run_examples.py  test_update.py  test_update_examples_dir.py
tests/cases_update/: call_twice.md  dataclass_indent.md  long_python_lines.py  python_class.py  simple.md  simple.py  test_insert_prints.md  test_insert_prints.py  use_globals.md
